--- a/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/inspec_test.yaml
+++ b/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/inspec_test.yaml
@@ -49,9 +49,17 @@ steps:
     name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
     args: ["workspace", "select", "$PROJECT_ID"]
 
+  - id: 'terraform apply'
+    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
+    args: ["apply", "--auto-approve"]
+
   - id: "inspec exec"
     name: 'gcr.io/$PROJECT_ID/cinc'
     args: ["exec", '$_FILE_PATH/inspec' , "-t", "gcp://", "--input-file", 'attributes.yaml']
+
+  - id: 'terraform destroy'
+    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
+    args: ["destroy", "--force"]
 
 timeout: 3600s
 substitutions:
