--- a/images/docker_images/cinc/Dockerfile
+++ b/images/docker_images/cinc/Dockerfile
@@ -1,6 +1,9 @@
 FROM ubuntu
+
 ARG CINC_VERSION
 ARG CINC_MINOR_VERSION
-COPY cinc-auditor_4.24.8-1_amd64.deb /tmp
-RUN dpkg -i /tmp/cinc-auditor_4.24.8-1_amd64.deb
+
+COPY cinc-auditor_${CINC_VERSION}-${CINC_MINOR_VERSION}_amd64.deb /tmp
+RUN dpkg -i /tmp/cinc-auditor_${CINC_VERSION}-${CINC_MINOR_VERSION}_amd64.deb
+RUN rm -f /tmp/cinc-auditor_${CINC_VERSION}-${CINC_MINOR_VERSION}_amd64.deb
 ENTRYPOINT ["/usr/bin/cinc-auditor"]
