[mod] インストールパッケージのchecksumの実行追加

--- a/images/docker_images/cinc/Dockerfile
+++ b/images/docker_images/cinc/Dockerfile
@@ -1,3 +1,13 @@
+FROM alpine
+
+ARG CINC_VERSION
+ARG CINC_MINOR_VERSION
+ARG CINC_VERSION_SHA256SUM
+
+WORKDIR /tmp
+COPY cinc-auditor_${CINC_VERSION}-${CINC_MINOR_VERSION}_amd64.deb .
+RUN echo -n "${CINC_VERSION_SHA256SUM}  cinc-auditor_${CINC_VERSION}-${CINC_MINOR_VERSION}_amd64.deb" > checksum && sha256sum -c checksum
+
 FROM ubuntu
 
 ARG CINC_VERSION
