--- a/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/terratest_test.yaml
+++ b/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/terratest_test.yaml
@@ -1,68 +1,12 @@
 steps:
-  - id: 'copy terraform modules'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["cp", "-r", $_TERRAFORM_MODULE_PATH , "."]
-
-  - id: 'copy main.tf'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["cp", "-r", '$_FILE_PATH/main/main.tf', "."]
-
-  - id: 'copy make terraform makeup shell'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["cp", "-r", '$_FILE_PATH/main/make.sh', "./main_terraform_make.sh"]
-
-  - id: 'make terraform.tf'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["sh", "main_terraform_make.sh", $PROJECT_ID, $_MODULE_PREFIX, $_TERRAFORM_VERSION]
-
-  - id: 'copy terratest make file'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["cp", "-r", '$_FILE_PATH/terratest/make.sh', "./terratest_make.sh"]
-
-  - id: 'make terraform.tf at terratest'
-    name: 'ubuntu'
-    volumes:
-      - name: 'test'
-        path: '/tests'
-    args: ["sh", "terratest_make.sh", $PROJECT_ID, '$_FILE_PATH/terratest/terraform.tf', $_TERRAFORM_VERSION]
-
-  - id: 'terraform init'
-    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
-    args: ["init"]
-
-  - id: 'terraform worspace select'
-    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
-    args: ["workspace", "select", "$PROJECT_ID"]
-
-  - id: 'terraform apply'
-    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
-    args: ["apply", "--auto-approve"]
-
   - id: "testing"
     name: 'gcr.io/$PROJECT_ID/terratest'
     volumes:
       - name: 'test'
         path: '/tests'
     args: ["go", "test", '$_FILE_PATH/terratest', '-v']
-
-  - id: 'terraform destroy'
-    name: 'hashicorp/terraform:$_TERRAFORM_VERSION'
-    args: ["destroy", "--force"]
+    env:
+      - GCP_PROJECT: $PROJECT_ID
 
 timeout: 3600s
 substitutions:
