--- a/terraform/gcp/modules/network/vpc_network/tests/inspec/files/gce.yaml
+++ b/terraform/gcp/modules/network/vpc_network/tests/inspec/files/gce.yaml
@@ -3,10 +3,12 @@
   zone: asia-northeast1-b
   subnetwork: test-tokyo
   size: 20
-  image: ubuntu-os-cloud/ubuntu-2004-lts
+  tag: test
+  image: https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v2020121
 - name: test-osaka
   machine_type: f1-micro
   zone: asia-northeast2-b
   subnetwork: test-osaka
   size: 20
-  image: ubuntu-os-cloud/ubuntu-2004-lts
+  tag: test
+  image: https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v2020121
