--- a/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/inspec_test.yaml
+++ b/terraform/gcp/modules/network/vpc_network/tests/cloudbuild/inspec_test.yaml
@@ -54,7 +54,7 @@ steps:
     args: ["apply", "--auto-approve"]
 
   - id: "inspec exec"
-    name: 'gcr.io/$PROJECT_ID/cinc'
+    name: 'cincproject/auditor'
     args: ["exec", '$_FILE_PATH/inspec' , "-t", "gcp://", "--input-file", 'attributes.yaml']
 
   - id: 'terraform destroy'
